--- a/src/main/resources/templates/volunteer/volunteer-list.html
+++ b/src/main/resources/templates/volunteer/volunteer-list.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>봉사 모집 게시판 페이지 - 목록</title>
-        <link
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>기부 페이지 - 목록</title>
+    <link
             rel="stylesheet"
-            href="/css/volunteer/volunteer-list.css"
-        />
-    </head>
+            href="/css/donation/donation-list.css"
+    />
+    <link rel="stylesheet" href="/css/main/basic-header.css" />
+    <link rel="stylesheet" href="/css/main/footer.css"/>
+    <link rel="stylesheet" href="/css/main/login-header-no-noti.css">
+    <link
+            rel="icon"
+            href="/images/favicon.png"
+    />
+</head>
     <body>
+    <div th:if="${isLogin}">
+        <th:block th:replace="~{main/login-header-no-noti :: header}"></th:block>
+    </div>
+    <div th:if="${!isLogin}">
+        <th:block th:replace="~{main/basic-header :: header}"></th:block>
+    </div>
         <div class="main-container content">
             <main class="section-container">
                 <section>
@@ -94,12 +107,13 @@
                 </section>
             </main>
         </div>
+    <div th:replace="~{main/footer :: footer}"></div>
     </body>
     <script th:inline="javascript">
         const lists = [[${lists}]];
         const pagination = [[${pagination}]];
     </script>
-    <script src="/js/volunteer/service/volunteer-list-service.js"></script>
-    <script src="/js/volunteer/layout/volunteer-list-layout.js" ></script>
+<script src="/js/volunteer/layout/volunteer-list-layout.js" ></script>
+<script src="/js/volunteer/service/volunteer-list-service.js"></script>
     <script src="/js/volunteer/event/volunteer-list-event.js"></script>
 </html>
