volunteer-list bug fix ~ing

--- a/src/main/resources/static/css/volunteer/volunteer-list.css
+++ b/src/main/resources/static/css/volunteer/volunteer-list.css
@@ -413,7 +413,7 @@ ul {
     list-style: none;
     padding-left: 0;
 }
-.donation-list-a {
+.volunteer-list-a {
     flex-direction: row;
     -webkit-box-pack: start;
     justify-content: flex-start;
@@ -447,7 +447,7 @@ h6 {
     font-family: inherit;
     font-size: inherit;
 }
-.donation-list-a .contest-info {
+.volunteer-list-a .contest-info {
     display: flex;
     flex-direction: column;
     -webkit-box-pack: start;
@@ -455,7 +455,7 @@ h6 {
     width: calc(100% - 217px);
     height: 100%;
 }
-.donation-list-a .contest-info-top {
+.volunteer-list-a .contest-info-top {
     position: relative;
     display: flex;
     flex-direction: row;
@@ -465,7 +465,7 @@ h6 {
     border-right: 1px solid rgb(219, 222, 226);
     height: 100%;
 }
-.donation-list-a .contest-info-top .outline-info {
+.volunteer-list-a .contest-info-top .outline-info {
     display: flex;
     flex-direction: column;
     -webkit-box-pack: start;
@@ -477,7 +477,7 @@ h6 {
     padding-left: 24px;
     padding-right: 24px;
 }
-.donation-list-a .contest-info-top .outline-info-category {
+.volunteer-list-a .contest-info-top .outline-info-category {
     display: flex;
     flex-direction: row;
     -webkit-box-pack: start;
@@ -492,7 +492,7 @@ h6 {
     letter-spacing: -0.15px;
     color: rgb(111, 119, 133);
 }
-.donation-list-a .contest-info-top .outline-info-category label {
+.volunteer-list-a .contest-info-top .outline-info-category label {
     margin-right: 8px;
     padding: 3px 10px;
 }
@@ -517,7 +517,7 @@ h6 {
     --sub-color: #6f778512;
     --border-color: #8e94a04c;
 }
-.donation-list-a .contest-info-top .outline-info-category span {
+.volunteer-list-a .contest-info-top .outline-info-category span {
     display: flex;
     flex-direction: column;
     -webkit-box-pack: center;
@@ -530,7 +530,7 @@ h6 {
     background: rgb(191, 198, 210);
     margin: 0px 8px;
 }
-.donation-list-a .contest-info-top .outline-info-title {
+.volunteer-list-a .contest-info-top .outline-info-title {
     display: inline-block;
     flex-direction: row;
     -webkit-box-pack: start;
@@ -548,7 +548,7 @@ h6 {
     overflow: hidden;
     white-space: nowrap;
 }
-.donation-list-a .contest-info-top .outline-info-companyDesc {
+.volunteer-list-a .contest-info-top .outline-info-companyDesc {
     width: 100%;
     text-align: left;
     display: -webkit-box;
@@ -563,7 +563,7 @@ h6 {
     margin-bottom: 16px;
     white-space: normal;
 }
-.donation-list-a .contest-info-top .outline-info-label {
+.volunteer-list-a .contest-info-top .outline-info-label {
     display: flex;
     flex-direction: row;
     -webkit-box-pack: start;
@@ -573,8 +573,8 @@ h6 {
     width: 100%;
     margin-bottom: 10px;
 }
-.donation-list-a .contest-info-top .outline-info-hashTag,
-.donation-list-a .contest-info-top .outline-info-label {
+.volunteer-list-a .contest-info-top .outline-info-hashTag,
+.volunteer-list-a .contest-info-top .outline-info-label {
     display: flex;
     flex-direction: row;
     -webkit-box-pack: start;
@@ -588,11 +588,11 @@ h6 {
     letter-spacing: -0.25px;
     color: rgb(142, 148, 160);
 }
-.donation-list-a .contest-info-top .outline-info-hashTag > div,
-.donation-list-a .contest-info-top .outline-info-label > div {
+.volunteer-list-a .contest-info-top .outline-info-hashTag > div,
+.volunteer-list-a .contest-info-top .outline-info-label > div {
     margin-bottom: 10px;
 }
-.donation-list-a .contest-info-bottom {
+.volunteer-list-a .contest-info-bottom {
     display: flex;
     flex-direction: row;
     -webkit-box-pack: start;
@@ -607,14 +607,14 @@ h6 {
 img {
     vertical-align: bottom;
 }
-.donation-list-a .contest-info-bottom-user-nick {
+.volunteer-list-a .contest-info-bottom-user-nick {
     margin-left: 4px;
     margin-right: 24px;
 }
-.donation-list-a .contest-info-bottom-user-nick,
-.donation-list-a .contest-info-bottom-view-icon,
-.donation-list-a .contest-info-bottom-view-count,
-.donation-list-a .contest-info-bottom-created-date{
+.volunteer-list-a .contest-info-bottom-user-nick,
+.volunteer-list-a .contest-info-bottom-view-icon,
+.volunteer-list-a .contest-info-bottom-view-count,
+.volunteer-list-a .contest-info-bottom-created-date{
     display: flex;
     flex-direction: column;
     -webkit-box-pack: center;
@@ -628,10 +628,10 @@ img {
     color: rgb(142, 148, 160);
 }
 
-.donation-list-a .contest-info-bottom-created-date{
+.volunteer-list-a .contest-info-bottom-created-date{
     margin-left:5px;
 }
-.donation-list-a .contest-info-bottom-view-icon {
+.volunteer-list-a .contest-info-bottom-view-icon {
     margin-right: 6px;
 }
 .trophy-svg {
@@ -654,7 +654,7 @@ img {
     margin-left: 2px;
     margin-right: 2px;
 }
-.donation-list-a .prize-info {
+.volunteer-list-a .prize-info {
     display: flex;
     flex-direction: column;
     -webkit-box-pack: center;
@@ -668,7 +668,7 @@ img {
     border-bottom-right-radius: 8px;
     background-color: rgb(245, 248, 255);
 }
-.donation-list-a .prize-info-row {
+.volunteer-list-a .prize-info-row {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -677,11 +677,11 @@ img {
     width: 100%;
     margin-bottom: 16px;
 }
-.donation-list-a .prize-info-row:last-child,
-.donation-list-a .prize-info-row:nth-last-child(2) {
+.volunteer-list-a .prize-info-row:last-child,
+.volunteer-list-a .prize-info-row:nth-last-child(2) {
     margin-bottom: 0px;
 }
-.donation-list-a .prize-info-row-key {
+.volunteer-list-a .prize-info-row-key {
     display: flex;
     flex-direction: row;
     -webkit-box-pack: start;
@@ -690,7 +690,7 @@ img {
     align-items: center;
     width: 40%;
 }
-.donation-list-a .prize-info-row-key span {
+.volunteer-list-a .prize-info-row-key span {
     display: flex;
     flex-direction: column;
     -webkit-box-pack: center;
@@ -706,7 +706,7 @@ img {
     word-break: keep-all;
 }
 
-.donation-list-a .prize-info-row-label {
+.volunteer-list-a .prize-info-row-label {
     display: flex;
     flex-direction: row;
     -webkit-box-pack: start;
@@ -725,7 +725,7 @@ img {
     width:200px;
     padding-left: 28px;
 }
-.donation-list-a .prize-info-row-label-date {
+.volunteer-list-a .prize-info-row-label-date {
     display: flex;
     flex-direction: column;
     -webkit-box-pack: center;
