volunteer-write 이동완료(interceptor)

--- a/src/main/resources/templates/volunteer/volunteer-list.html
+++ b/src/main/resources/templates/volunteer/volunteer-list.html
@@ -25,9 +25,11 @@
                             사소한 도움이라도 괜찮아요. 우리가 나누는
                             작은 마음들이 모여 더 큰 기적을 만듭니다.
                         </div>
-                        <button class="write-button">
-                            <a href="/volunteer/volunteer-write" class="visual-correction">작성하기</a>
-                        </button>
+                        <a href="/volunteer/volunteer-write" class="write-button">
+                            <span class="visual-correction"
+                                >작성하기</span
+                            >
+                        </a>
                     </div>
                 </div>
                 <div
