volunteer-write 유효성 js추가

--- a/src/main/resources/templates/volunteer/volunteer-write.html
+++ b/src/main/resources/templates/volunteer/volunteer-write.html
@@ -56,6 +56,7 @@
                                                 maxlength="19"
                                                 value=""
                                                 oninput="updateCharCount(this)"
+                                                id="post-title"
                                         />
                                         <div class="max-length">
                                             <span id="charCount">0</span>/20
@@ -93,6 +94,7 @@
                                             name="postSummary"
                                             placeholder="내용을 한 줄로 소개해주세요!"
                                             maxlength="300"
+                                            id="post-summary"
                                     ></textarea>
                                     </label>
                                 </div>
@@ -114,6 +116,7 @@
                                                 placeholder="숫자만 입력 가능합니다."
                                                 value=""
                                                 oninput="validateAndDisplayNumber(this)"
+                                                id="post-recruitmentCount"
                                         />
                                     </label>
                                 </div>
