--- a/src/main/resources/static/css/volunteer/volunteer-write.css
+++ b/src/main/resources/static/css/volunteer/volunteer-write.css
@@ -501,3 +501,13 @@ ul {
 .date-container {
     display: flex;
 }
+
+.submit-button.disable {
+    color: rgb(191, 198, 210);
+    background-color: rgb(233, 235, 237);
+}
+
+.submit-button.disable:hover {
+    cursor: default;
+}
+
