volunteer-write 작성 성공

--- a/src/main/resources/templates/volunteer/volunteer-write.html
+++ b/src/main/resources/templates/volunteer/volunteer-write.html
@@ -240,7 +240,9 @@
                             </div>
                         </div>
                         <div class="submit-button-container">
-                            <button type="submit" id="submit-volunteer" class="submit-button">작성완료</button>
+                            <button type="submit" id="submit-volunteer" class="submit-button">
+                                작성완료
+                            </button>
                         </div>
                     </main>
                 </form>
