--- a/src/main/resources/templates/volunteer/volunteer-inquiry.html
+++ b/src/main/resources/templates/volunteer/volunteer-inquiry.html
@@ -212,15 +212,12 @@
                                                     />신고하기</span
                                                 >
                                             </div>
-<!--                                            <h2 class="title" th:text="${post.title}">-->
-<!--                                            </h2>-->
+                                            <h2 class="title" th:text="${volunteer.postTitle}">
+                                            </h2>
                                             <div class="user-info">
-                                                <a
-                                                    href="/m/megakukjin2297"
-                                                    class="avatar-container avatar"
-                                                    ><img
-                                                        src="https://cdn-dantats.stunning.kr/static/feature/profile/default-profile.png.small?q=80&amp;f=webp&amp;t=crop&amp;s=256x256"
-                                                /></a>
+                                                <div class="member-thumb member-thumb2" id="mainProfileThumbnail"
+                                                     th:style="'background-image: url(\'/profile/display?memberId=' + ${member.id} + '\');'">
+                                                </div>
                                                 <div
                                                     class="user-info-text-wrapper"
                                                 >
@@ -231,7 +228,9 @@
                                                         <a
                                                             class="user-nick nick"
                                                             href="/m/megakukjin2297"
-                                                            >사용자 닉네임</a
+                                                            th:text="${volunteer.memberName != null ? volunteer.memberName : (volunteer.memberNickName != null ? volunteer.memberNickName : '닉네임없음')}"
+
+                                                            ></a
                                                         >
                                                     </p>
                                                 </div>
@@ -357,6 +356,7 @@
         const volunteer = [[${volunteer}]]
         const attachments = [[${attachments}]]
         const posts = [[${post}]]
+        const member = [[${member}]]
     </script>
     <script src="/js/volunteer/event/volunteer-inquiry-event.js"></script>
     <script>let daysLeftText;
