--- a/src/main/resources/templates/volunteer/volunteer-inquiry.html
+++ b/src/main/resources/templates/volunteer/volunteer-inquiry.html
@@ -110,13 +110,7 @@
                             </section>
                             <section class="attach-title-container">
                                 <div class="content-title row-title">
-                                    첨부파일<button
-                                        class="download-all-btn"
-                                >
-                                                <span class="visual-correction" id="save-all-button"
-                                                >전체 받기</span
-                                                >
-                                </button>
+                                    첨부파일
                                 </div>
                                 <div
                                         class="content-content row-content"
@@ -237,35 +231,22 @@
                                     </div>
                                 </section>
                                 <div class="donation-btn-wrap">
-                                    <div
-                                            class="donation-btn-container tooltip"
-
-                                    >
-                                        <a class="donation-btn-style"
-                                        ><span
-                                                class="visual-correction"
-                                        >지원하기</span
-                                        ></a
-                                        >
+                                    <div class="donation-btn-container tooltip">
+                                        <a class="donation-btn-style" id="apply-btn">
+                                            <span class="visual-correction">지원하기</span>
+                                        </a>
                                     </div>
-
-                                    <div class="donation-btn-container"
-                                    >
-                                        <a class="donation-btn-style2"
-                                        ><span
-                                                class="visual-correction"
-                                        >수정하기</span
-                                        ></a
-                                        >
+                                    <div class="donation-btn-container" id="edit-buttons" style="display: none;">
+                                        <a class="donation-btn-style2">
+                                            <span class="visual-correction">수정하기</span>
+                                        </a>
                                         <div class="space"></div>
-                                        <a class="donation-btn-style2"
-                                        ><span
-                                                class="visual-correction"
-                                        >삭제하기</span
-                                        ></a
-                                        >
+                                        <a class="donation-btn-style2">
+                                            <span class="visual-correction">삭제하기</span>
+                                        </a>
                                     </div>
                                 </div>
+                                <input type="hidden" id="postId" value="[[${post.id}]]">
                             </div>
                         </div>
                     </section>
