--- a/src/main/resources/templates/volunteer/volunteer-inquiry.html
+++ b/src/main/resources/templates/volunteer/volunteer-inquiry.html
@@ -231,12 +231,14 @@
                                     </div>
                                 </section>
                                 <div class="donation-btn-wrap">
-                                    <div class="donation-btn-container tooltip">
+                                    <!-- 작성자가 아닌 경우 '지원하기' 버튼 표시 -->
+                                    <div class="donation-btn-container tooltip" th:if="${!isAuthor}">
                                         <a class="donation-btn-style" id="apply-btn">
                                             <span class="visual-correction">지원하기</span>
                                         </a>
                                     </div>
-                                    <div class="donation-btn-container" id="edit-buttons" style="display: none;">
+                                    <!-- 작성자인 경우 '수정하기', '삭제하기' 버튼 표시 -->
+                                    <div class="donation-btn-container" id="edit-buttons" th:if="${isAuthor}">
                                         <a class="donation-btn-style2">
                                             <span class="visual-correction">수정하기</span>
                                         </a>
@@ -246,7 +248,6 @@
                                         </a>
                                     </div>
                                 </div>
-                                <input type="hidden" id="postId" value="[[${post.id}]]">
                             </div>
                         </div>
                     </section>
@@ -285,9 +286,8 @@
 <script th:inline="javascript">
     const volunteer = [[${volunteer}]]
     const attachments = [[${attachments}]]
-    const posts = [[${post}]]
-    const member = [[${member}]]
-    console.log(attachments)
+    const isAuthor = [[${isAuthor}]]
+    console.log(isAuthor)
 </script>
 <script src="/js/volunteer/event/volunteer-inquiry-event.js"></script>
 </html>
