게시물 수정- 쿼리 진행중

--- a/src/main/resources/static/css/volunteer/volunteer-update.css
+++ b/src/main/resources/static/css/volunteer/volunteer-update.css
@@ -500,3 +500,12 @@ ul {
 .date-container {
     display: flex;
 }
+
+.submit-button.disable {
+    color: rgb(191, 198, 210);
+    background-color: rgb(233, 235, 237);
+}
+
+.submit-button.disable:hover {
+    cursor: default;
+}
