--- a/src/main/resources/templates/volunteer/volunteer-inquiry.html
+++ b/src/main/resources/templates/volunteer/volunteer-inquiry.html
@@ -231,19 +231,17 @@
                                     </div>
                                 </section>
                                 <div class="donation-btn-wrap">
-                                    <!-- 작성자가 아닌 경우 '지원하기' 버튼 표시 -->
                                     <div class="donation-btn-container tooltip" th:if="${!isAuthor}">
                                         <a class="donation-btn-style" id="apply-btn">
                                             <span class="visual-correction">지원하기</span>
                                         </a>
                                     </div>
-                                    <!-- 작성자인 경우 '수정하기', '삭제하기' 버튼 표시 -->
                                     <div class="donation-btn-container" id="edit-buttons" th:if="${isAuthor}">
-                                        <a class="donation-btn-style2">
+                                        <a class="donation-btn-style2 go-update">
                                             <span class="visual-correction">수정하기</span>
                                         </a>
                                         <div class="space"></div>
-                                        <a class="donation-btn-style2">
+                                        <a class="donation-btn-style2 go-delete">
                                             <span class="visual-correction">삭제하기</span>
                                         </a>
                                     </div>
