--- a/src/main/resources/templates/volunteer/volunteer-update.html
+++ b/src/main/resources/templates/volunteer/volunteer-update.html
@@ -6,7 +6,7 @@
         <title>봉사 모집 게시판 수정</title>
         <link
             rel="stylesheet"
-            href="../../static/css/volunteer/volunteer-update.css"
+            href="/css/volunteer/volunteer-update.css"
         />
         <link
             rel="icon"
@@ -16,7 +16,8 @@
     <body>
         <div class="content-wrapper">
             <div class="content-container contents">
-                <main class="content-form contest-launch form">
+                <form th:action="@{/volunteer/volunteer-update}" method="post" enctype="multipart/form-data" name="volunteer-update-form" th:object="${volunteer}">
+                <main class="content-form contest-launch form" style="margin-left: 27%;">
                     <div class="section-divider"></div>
                     <h3 class="write-introduce">✍🏻 봉사 모집 게시판 수정</h3>
                     <div class="form">
@@ -48,11 +49,14 @@
                             <div class="option">
                                 <label class="company-name">
                                     <input
+                                        th:value="*{postTitle}"
                                         type="text"
                                         placeholder="제목"
                                         maxlength="19"
                                         value=""
                                         oninput="updateCharCount(this)"
+                                        name="postTitle"
+                                        id="post-title"
                                     />
                                     <div class="max-length">
                                         <span id="charCount">0</span>/20
@@ -89,6 +93,9 @@
                                     <textarea
                                         placeholder="내용을 한 줄로 소개해주세요!"
                                         maxlength="300"
+                                        th:text="*{postSummary}"
+                                        name="postSummary"
+                                        id="post-summary"
                                     ></textarea>
                                 </label>
                             </div>
@@ -109,6 +116,9 @@
                                         placeholder="숫자만 입력 가능합니다."
                                         value=""
                                         oninput="validateAndDisplayNumber(this)"
+                                        name="recruitmentCount"
+                                        th:value="*{recruitmentCount}"
+                                        id="post-recruitmentCount"
                                     />
                                 </label>
                             </div>
@@ -130,6 +140,8 @@
                                         type="date"
                                         id="start-date"
                                         onchange="updateDateRange()"
+                                        name="vtSDate"
+                                        th:value="*{vtSDate}"
                                     />
                                 </label>
                                 <span class="date-span">종료일</span>
@@ -138,6 +150,8 @@
                                         type="date"
                                         id="end-date"
                                         onchange="updateDateRange()"
+                                        name="vtEDate"
+                                        th:value="*{vtEDate}"
                                     />
                                 </label>
                                 <div class="date-period">
@@ -162,6 +176,8 @@
                                     id="briefing"
                                     aria-hidden="true"
                                     placeholder="내용을 자세히 작성해주세요!"
+                                    name="postContent"
+                                    th:text="*{postContent}"
                                 ></textarea>
 
                                 <input
@@ -229,13 +245,23 @@
                         </div>
                     </div>
                     <div class="submit-button-container">
-                        <button id="submit-review" class="submit-button">
+                        <button id="submit-volunteer" class="submit-button">
                             수정 완료
                         </button>
                     </div>
                 </main>
+                <input type="hidden" name="id" />
+                <input type="hidden" name="uuid" />
+                <input type="hidden" name="realName" />
+                <input type="hidden" name="path" />
+                <input type="hidden" name="size" />
+                </form>
             </div>
         </div>
     </body>
-    <script src="../../static/js/volunteer/volunteer-update.js"></script>
+    <script th:inline="javascript">
+        const attachments = [[${attachments}]];
+    </script>
+    <script src="/js/volunteer/service/volunteer-write-service.js"></script>
+    <script src="/js/volunteer/volunteer-update.js"></script>
 </html>
