11-26점심 + 수정, 삭제 완료, 지원서비스시작

--- a/src/main/resources/templates/volunteer/volunteer-update.html
+++ b/src/main/resources/templates/volunteer/volunteer-update.html
@@ -203,10 +203,12 @@
                             <section class="attach-file-container file-section">
                                 <div class="attach-file-zone drop-zone">
                                     <input
-                                        type="file"
-                                        id="drop-zone-input"
-                                        class="attach-file-zone2"
-                                    /><svg
+                                            type="file"
+                                            id="drop-zone-input"
+                                            class="attach-file-zone2"
+                                            name="file"
+                                    />
+                                    <svg
                                         viewBox="0 0 24 24"
                                         class="attach-file-img"
                                     >
